--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toast-notifications": "^2.5.1",
+    "swr": "^2.2.2",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
