--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "proxy": "https://penncourseplan.com",
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
